--- a/practical10.css
+++ b/practical10.css
@@ -9,7 +9,7 @@
 #header {
     width: 100%;
     height: 70px;
-    background-color: #00416D;
+    background-color: #fcdab7;
     display: flex;
     justify-content: center;
     align-items: center;
